docs/versioned_docs/version-0.13.15/tutorials/transformations/object-field-mapping.mdx
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Object and field mapping

![platform](https://img.shields.io/badge/Platform%20Tutorial-009be5)

This tutorial will use Supaglue to sync your customers' CRM records into existing tables in your database using your schema.

## Prerequisites

This tutorial assumes you have already gone through Supaglue's [Quickstart](../../quickstart) and will use the following technologies:

- Nextjs
- Prisma
- Postgres

## Scenario

Suppose that your application has two database tables, `contact` and `opportunity`, that we want to write into using your customers' CRM data:

```sql
                                 Table "production.contact"
          Column          |              Type              | Collation | Nullable | Default
--------------------------+--------------------------------+-----------+----------+---------
 first_name               | text                           |           | not null |
 last_name                | text                           |           | not null |
 id                       | text                           |           | not null |
```

```sql
                                 Table "production.opportunity"
          Column          |              Type              | Collation | Nullable | Default
--------------------------+--------------------------------+-----------+----------+---------
 name                     | text                           |           | not null |
 description              | text                           |           | not null |
 probability              | text                           |           | not null |
 id                       | text                           |           | not null |
```

In this tutorial, we'll use three example customers: `user-`, `user-2`, and `user-3`, that use the following CRMs and need the following objects to be mapped to your `contact` and `opportunity` tables:

| Your database table | `user-1`          | `user-2`                 | `user-3`                 |
| ------------------- | ----------------- | ------------------------ | ------------------------ |
| `contact`           | Hubspot `contact` | Salesforce `Lead`        | Salesforce `Contact`     |
| `opportunity`       | Hubspot `deal`    | Salesforce `Opportunity` | Salesforce `Opportunity` |

## Write mapped records to your database

We will go over how to do the following:

1. Listen for Supaglue's `sync.complete` webhook event to trigger a transformation function
2. Define the transformation function that will map per-provider/customer/object records to your application entities
3. Paginate over and run the transform function to convert the raw CRM data provided by Supaglue into your existing database tables

:::note
"Entities" is used to refer to your application data models.
:::

### 1. Listen for Supaglue's webhook event

Supaglue [emits different kinds](../../platform/notification-webhooks) of notification webhooks. For object and field mapping, we want to process the `sync.complete` event which Supaglue emits after a full or incremental sync completes.

```ts
export async function POST(request: NextRequest) {
  const data = await request.json();

  if (data.webhook_event_type !== 'sync.complete') {
    return NextResponse.json({});
  }

  if (data.result !== 'SUCCESS') {
    return NextResponse.json({});
  }

  // call your transformation function here

  return NextResponse.json({});
}
```

:::info
Please refer to the [consuming webhooks](../listen-for-webhooks) tutorial for more details on how to do it.
:::

### 2. Define the transformation function

When a sync completes for a specific provider/customer/object, we need to determine if that maps to a `contact` or `opportunity` in your application.

#### Define a per-customer mapper file

First, create a per-customer mapper file containing the mapping configuration for each customer's records to your database tables. The following are examples for `user-1`, `user-2`, `user-3` from the [Scenario](#scenario) section above:

<Tabs>

<TabItem value="user-1" label="user-1" default>

```ts
// user1 mapping:
//    hubspot's contact.firstname --> contact.firstName
//    hubspot's contact.lastname --> contact.lastName
// and:
//    hubspot's deal.hs_deal_stage_probability --> opportunity.probability (a float)
//    hubspot's deal.dealname --> opportunity.name
//    hubspot's deal.description --> opportunity.description
const user1: UserConfig = {
  providerName: 'hubspot',
  entityMappings: {
    contact: {
      object: 'contact',
      mappingFn: (record: Record<string, string | null>): Contact => ({
        firstName: record['firstname'],
        lastName: record['lastname'],
      }),
    },
    opportunity: {
      object: 'deal',
      mappingFn: (record: Record<string, string | null>): Opportunity => {
        const hs_deal_stage_probability = record['hs_deal_stage_probability'];
        const probability = hs_deal_stage_probability !== null ? parseFloat(hs_deal_stage_probability) : null;
        return {
          name: record['dealname'],
          description: record['description'],
          probability,
        };
      },
    },
  },
};
```

</TabItem>

<TabItem value="user-2" label="user-2">

```ts
// user2 mapping:
//    salesforce's Lead.FirstName --> Contact.firstName
//    salesforce's Lead.LastName --> Contact.lastName
// and:
//    salesforce's Opportunity.Name --> opportunity.name
//    salesforce's Opportunity.Description --> opportunity.decription
//    salesforce's Opportunity.ProbabilityV2__c --> opportunity.probability (a float)
const user2: UserConfig = {
  providerName: 'salesforce',
  entityMappings: {
    contact: {
      object: 'Lead',
      mappingFn: (record: Record<string, string>): Contact => ({
        firstName: record['FirstName'],
        lastName: record['LastName'],
      }),
    },
    opportunity: {
      object: 'Opportunity',
      mappingFn: (record: Record<string, string>): Opportunity => ({
        name: record['Name'],
        description: record['Description'],
        probability: parseInt(record['ProbabilityV2__c']) / 100, // ProbabilityV2__c is field that is a picklist of values [10, 20, ..., 100]
      }),
    },
  },
};
```

</TabItem>

<TabItem value="user-3" label="user-3">

```ts
// user3 mapping:
//    salesforce's Contact.FirstName --> Contact.firstName
//    salesforce's Contact.LastName --> Contact.lastName
// and:
//    salesforce's Opportunity.Name --> opportunity.name
//    salesforce's Opportunity.Description --> opportunity.decription
//    salesforce's Opportunity.Probability --> opportunity.probability (a float)
const user3: UserConfig = {
  providerName: 'salesforce',
  entityMappings: {
    contact: {
      object: 'Contact',
      mappingFn: (record: Record<string, string>): Contact => ({
        firstName: record['FirstName'],
        lastName: record['LastName'],
      }),
    },
    opportunity: {
      object: 'Opportunity',
      mappingFn: (record: Record<string, string>): Opportunity => ({
        name: record['Name'],
        description: record['Description'],
        probability: parseFloat(record['Probability']) / 100,
      }),
    },
  },
};
```

</TabItem>

</Tabs>

#### Create a helper to retrieve the right mapper based on {providerName, customerId, object}

The following code uses the per-customer mapper files from above:

```ts
const userConfigs: Record<string, UserConfig> = {
  'user-1': user1,
  'user-2': user2,
  'user-3': user3,
};

// this function can be called to get the mapper (to go from Supaglue object to your application entity) for the given user
export const getMapper = (providerName: string, customerId: string, object: string): MapperAny | null => {
  const config = userConfigs[customerId];
  if (!config) {
    return null;
  }

  if (config.providerName !== providerName) {
    return null;
  }

  // Find the corresponding entity name and mapper
  for (const [entityName, entityMappingConfig] of Object.entries(config.entityMappings)) {
    if (entityMappingConfig.object === object) {
      return {
        object,
        entityName,
        mappingFn: entityMappingConfig.mappingFn,
      } as MapperAny;
    }
  }
};
```

:::note
In this sample code, you, the developer, define the object and field mappings. You could also evolve this code to allow your customers to configure the object and field mappings.
:::

#### Use the helper to call the mapper

Now, let's call the mapper file from your transformation function:

```ts
// For different customers, we want to map things differently
const mapper = getMapper(data.provider_name, data.customer_id, data.object);
```

### 3. Paginate over and transform newly-synced records

Now, we want to transform the newly-synced records to write into your existing database tables. We'll use the mapper that we wrote earlier to do this.

:::info
Please refer to the [Pagination](./pagination) tutorial for more details on pagination over newly-synced records.
:::

<Tabs>

<TabItem value="Algorithm" label="Algorithm" default>

Upon a `sync.complete` webhook event:

1. Read all provider/customer/object records since the last [high-water mark](./pagination)
2. For each record:
   - Transform it using the mapper
   - Upsert the transformed record into your database table
3. Set the new high watermark

</TabItem>

<TabItem value="Example Code" label="Example Code">

```ts
const lastMaxModifiedAt = lastMaxLastModifiedAtMs ? new Date(lastMaxLastModifiedAtMs) : undefined;

const newMaxLastModifiedAtMs = await step.run('Update records', async () => {
  async function getSupaglueRecords(providerName: string, object: string) {
    const params = {
      where: {
        supaglue_provider_name: data.provider_name,
        supaglue_customer_id: data.customer_id,
        supaglue_last_modified_at: {
          gt: lastMaxModifiedAt,
        },
      },
    };

    switch (providerName) {
      case 'salesforce': {
        switch (object) {
          case 'Contact':
            return prismaSupaglue.supaglueSalesforceContact.findMany(params);
          case 'Lead':
            return prismaSupaglue.supaglueSalesforceLead.findMany(params);
          case 'Opportunity':
            return prismaSupaglue.supaglueSalesforceOpportunity.findMany(params);
          default:
            throw new Error(`Unsupported Salesforce object: ${object}`);
        }
      }
      case 'hubspot': {
        switch (object) {
          case 'contact':
            return prismaSupaglue.supaglueHubSpotContact.findMany(params);
          case 'deal':
            return prismaSupaglue.supaglueHubSpotDeal.findMany(params);
          default:
            throw new Error(`Unsupported HubSpot object: ${object}`);
        }
      }
      default:
        throw new Error(`Unsupported provider: ${providerName}`);
    }
  }

  // Read from staging table
  const records = await getSupaglueRecords(data.provider_name, data.object);
  if (!records.length) {
    return undefined;
  }

  let maxLastModifiedAtMs = 0;

  // TODO: don't iterate one by one
  for (const record of records) {
    const lastModifiedAtMs = record.supaglue_last_modified_at.getTime();
    if (lastModifiedAtMs > maxLastModifiedAtMs) {
      maxLastModifiedAtMs = lastModifiedAtMs;
    }

    if (record.supaglue_is_deleted) {
      // Delete
      const params = {
        where: {
          providerName: data.provider_name,
          customerId: data.customer_id,
          originalId: record.supaglue_id,
        },
      };

      switch (mapper.entityName) {
        case 'contact':
          await prismaApp.contact.deleteMany(params);
          break;
        case 'opportunity':
          await prismaApp.opportunity.deleteMany(params);
          break;
      }
    } else {
      // Upsert
      switch (mapper.entityName) {
        case 'contact': {
          const mappedRecord = mapper.mappingFn(record.supaglue_mapped_data as Record<string, unknown>);
          const decoratedData = {
            providerName: data.provider_name,
            customerId: data.customer_id,
            originalId: record.supaglue_id,
            ...mappedRecord,
          };
          await prismaApp.contact.upsert({
            create: decoratedData,
            update: decoratedData,
            where: {
              providerName_customerId_originalId: {
                providerName: data.provider_name,
                customerId: data.customer_id,
                originalId: record.supaglue_id,
              },
            },
          });
          break;
        }
        case 'opportunity': {
          const mappedRecord = mapper.mappingFn(record.supaglue_mapped_data as Record<string, unknown>);
          const decoratedData = {
            providerName: data.provider_name,
            customerId: data.customer_id,
            originalId: record.supaglue_id,
            ...mappedRecord,
          };
          await prismaApp.opportunity.upsert({
            create: decoratedData,
            update: decoratedData,
            where: {
              providerName_customerId_originalId: {
                providerName: data.provider_name,
                customerId: data.customer_id,
                originalId: record.supaglue_id,
              },
            },
          });
          break;
        }
      }
    }
  }

  return maxLastModifiedAtMs;
});
```

</TabItem>

</Tabs>

## More information

You can try out a working example of this tutorial by cloning the [object-field-mapping-example](https://github.com/supaglue-labs/object-field-mapping-example) repository and following the instructions in the README.

You'll want to customize the code from this tutorial to fit your specific application data model, use case, performance, and reliability requirements.
